# ewdk

./: .gitignore  1.bat  CMakeLists.txt  Environment.reg  README.md  _debug_iso.go  backup_260419_013507.reg  backup_260420_233130.reg  build.bat  build.py  certmgr.msc - 快捷方式.lnk  clean.go  clean_test.go  compressdir.go  compressdir_test.go  env-amd64-only.txt  env.go  env_test.go  environment.tar  ewdk-env-20260427-110324.txt  ewdk-output.txt  ewdk.cmake  ewdk.env.json  ewdk_env_diff.txt  gen.py  get-wdk-env.ps1  go.mod  go.sum  km_crt_stubs.c  main.go  mount-task.go  mount-task.ps1  osk.exe.lnk  sdk.cmake  slim-ewdk.py  slim.cmd  wdk.cmake  挂载.bat  构建.cmd
.github/workflows/: ci.yml  slim-ewdk.yml
.trae/skills/bsod-analysis/: SKILL.md
.trae/skills/ewdk/: SKILL.md
.trae/skills/vcxproj-to-cmake/: .clang-format  SKILL.md  build.cmd  convert_encoding.py  format_all.cmd  install.bat  uninstall.bat
cmake/: cmake.go
demo/: CMakeLists.txt
demo/NTMemory/: CMakeLists.txt  main.cpp
demo/NTMemory/Imgui/: imgui.h  imgui_draw.cpp  imgui_widgets.cpp
demo/asm/: CMakeLists.txt  build.cmd  main.c
demo/kernel/: CMakeLists.txt  main.c
demo/kernel_helloworld/: CMakeLists.txt  driver.c
demo/mfc/: CMakeLists.txt  main.cpp
demo/qt6/: CMakeLists.txt  build.bat  build.cmd  callback_stubs.cpp  gen_qapplication.cpp  gen_qapplication.h  gen_qcoreapplication.cpp  gen_qcoreapplication.h  gen_qobject.cpp  gen_qobject.h  gen_qpushbutton.cpp  gen_qpushbutton.h  gen_qtimer.cpp  gen_qtimer.h  gen_qtreewidget.cpp  gen_qtreewidget.h  gen_qwidget.cpp  gen_qwidget.h  libmiqt.h  sync_stubs.cpp
demo/sysDemo/: CMakeLists.txt
demo/um-dll/: CMakeLists.txt  dllmain.c
demo/um-exe/: CMakeLists.txt  main.c
demo/um-kminfo/: CMakeLists.txt  main.c
demo/um-lib/: CMakeLists.txt  lib.c
demo/unicorn/: CMakeLists.txt
demo/user_helloworld/: CMakeLists.txt
demo/zydis/: CMakeLists.txt  Zydis.h  ZydisCompat.c  ZydisCompat.h  build.bat
demo/zydis/examples/: Disassemble.c  DisassembleSimple.c  EncodeFromScratch.c  EncodeMov.c  Formatter01.c  Formatter02.c  Formatter03.c  RewriteCode.c  ZydisPerfTest.c  ZydisWinKernel.c
demo/zydis/tools/: ZydisDisasm.c  ZydisFuzzShared.h  ZydisInfo.c  ZydisTestEncoderAbsolute.c  ZydisToolsShared.h
scripts/: get_ewdk_url.go
